--- a/src/app/error/error.component.html
+++ b/src/app/error/error.component.html
@@ -1,1 +1,8 @@
-<p>error works!</p>
+
+
+
+<div class="errorCont">
+    <h1 class="error404 ">404</h1>
+    <p class="errorNOTFound">Page Not Found</p>
+    <a routerLink="/" class="home">Go to Home</a>
+</div>
