--- a/src/app/front-pg/front-pg.component.scss
+++ b/src/app/front-pg/front-pg.component.scss
@@ -11,3 +11,10 @@
     background-position: center;
     color: white;
 }
+@media screen and (max-width: 768px) {
+    .PHOTO{
+        padding: 100px 20px;
+        font-size: 18px;
+    }
+    
+}
